--- a/css/indexStyles.css
+++ b/css/indexStyles.css
@@ -9,7 +9,7 @@
     width: calc(25% - 40px);
     box-sizing: border-box;
     border-radius: 10px;
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     min-width: 300px;
